fix: simplify location string in multiple language files

--- a/app/i18n/en/common.json
+++ b/app/i18n/en/common.json
@@ -45,7 +45,7 @@
   "eventTitle": "Event",
   "previous": "Previous",
   "next": "Next",
-  "location": "Location: {{location}}",
+  "location": "Location",
   "registerButton": "Register",
   "leaveButton": "Leave",
   "preparing": "Preparing",
@@ -181,4 +181,4 @@
   "noMatchesPlayed": "No matches played",
   "emailRequired": "Email is required"
 }
-  
+
