--- a/app/i18n/es/common.json
+++ b/app/i18n/es/common.json
@@ -45,7 +45,7 @@
     "eventTitle": "Evento",
     "previous": "Anterior",
     "next": "Siguiente",
-    "location": "Ubicación: {{location}}",
+    "location": "Ubicación",
     "registerButton": "Registrarse",
     "leaveButton": "Salir",
     "preparing": "Preparando",
