--- a/app/i18n/vi/common.json
+++ b/app/i18n/vi/common.json
@@ -45,7 +45,7 @@
     "eventTitle": "Sự kiện",
     "previous": "Trước",
     "next": "Tiếp theo",
-    "location": "Địa điểm: {{location}}",
+    "location": "Địa điểm",
     "registerButton": "Đăng ký",
     "leaveButton": "Rút lui",
     "preparing": "Đang chuẩn bị",
