--- a/app/i18n/es/club.json
+++ b/app/i18n/es/club.json
@@ -1,3 +1,6 @@
 {
-    "home":"Inicio"
+    "home": "Inicio",
+    "events": "Eventos",
+    "members": "Miembros",
+    "requests": "Solicitudes"
 }
