--- a/app/i18n/zh/common.json
+++ b/app/i18n/zh/common.json
@@ -169,5 +169,26 @@
   "enterScore": "输入分数",
   "completeMatch": "完成比赛",
   "rematch": "再来一把",
-  "swapRematch": "换人再开"
+  "swapRematch": "换人再开",
+  "noMatchesPlayed": "暂无比赛记录",
+  "joinMessage": "申请留言",
+  "joinMessagePlaceholder": "请告诉我们您想加入这个俱乐部的原因...",
+  "submitRequest": "提交申请",
+  "submitting": "提交中...",
+  "submit": "提交",
+  "joinRequests": "加入申请",
+  "noJoinRequests": "暂无加入申请",
+  "approve": "批准",
+  "reject": "拒绝",
+  "approved": "已批准",
+  "rejected": "已拒绝",
+  "message": "留言",
+  "pendingRequests": "{{count}} 个待处理",
+  "leaveClubDescription": "您确定要离开这个俱乐部吗？您将失去访问所有俱乐部活动和赛事的权限。",
+  "noPendingRequests": "暂无待处理请求",
+  "rejectRequest": "拒绝请求",
+  "rejectRequestDescription": "您确定要拒绝这个加入请求吗？",
+  "noPermission": "您没有权限访问此页面",
+  "clickToViewRequests": "点击查看待处理请求",
+  "requested": "已申请"
 }
