--- a/app/i18n/vi/club.json
+++ b/app/i18n/vi/club.json
@@ -1,3 +1,6 @@
 {
-    "home": "Home"
-}
+    "home": "Trang chủ",
+    "events": "Sự kiện",
+    "members": "Thành viên",
+    "requests": "Yêu cầu"
+} 
